# test-python-celery

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: app.py  celery.py  constants.py  db_client.py  db_model.py  tasks.py  worker.py
