[tool.poetry]
name = "test-python-celery"
version = "0.0.2"
description = ""
authors = ["Mehedee Siddique <mehedees@live.com>"]

[tool.poetry.dependencies]
python = "3.11.3"
fastapi = "^0.95.0"
uvicorn = {version = "^0.22.0", extras = ["standard"]}
loguru = "^0.6.0"
celery = "^5.2.7"
redis = "^4.5.5"
requests = "^2.28.1"
flower = "^2.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
